--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -4,78 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Group 19: Project\n"
+    "# Predicting NBA All-Star Chance Based on Player Performance"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NBA:\n",
-    "NBA is one of the most awaited sport events in America and the globe in general. Every year in February, NBA fans rejoice as they get to see their favorite players selected for the all-star game. Players are selected by media and fan votes, meaning that popularity is the nominating factor. However, players are more likely to be popular based on their individual game-to-game performance. Thus, this analysis hopes to answer the question: Can an NBA player’s selection to the all star game be predicted by their annual performance?\n",
-    "\n",
-    "In order to answer this question, we will be using two sets of data, one from “NBA Player Stats” on nba.com and “All Star Stat 2000-2016” from kaggle.com. NBA Player Stats includes all the NBA player statistics for each season from 2010-2016 and the All Star dataset includes the all star statistics from 2000-2016. Using these datasets we aim to make a classification model that will predict whether a player will be an all star for each season based on their annual performances.\n",
-    "\n"
+    "By: Bill Makwae, Ayush Vora, Ray Nguyen, QingRu Kong"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every year in February, NBA fans rejoice as they get to see their favorite players selected for the all-star game. Players are selected by media and fan votes, meaning that popularity is the nominating factor. However, players are more likely to be popular based on their individual game-to-game performance. Thus, this analysis hopes to answer the question: Can an NBA player’s selection to the all star game be predicted by their annual performance?\n",
     "\n",
-    "The colummns are:\n",
-    "\n",
-    "- 'year' : Season\n",
-    "- 'Player': player's name \n",
-    "- 'MIN' : average minutes per game\n",
-    "- 'PTS' : average points per game\n",
-    "- 'FG.' : average field goal percentage per game\n",
-    "- 'AST' : average assists per game\n",
-    "\n",
-    "\n",
-    "....\n",
-    "\n",
-    "We want to answer the question: With a certain stats throughout the season, is it likely for a player to win the All Star title?\n",
-    "\n",
-    "The original datasets are available here: "
+    "In order to answer this question, we will be using two sets of data, one from [\"NBA Player Stats” on nba.com](https://www.nba.com/stats/players/traditional/?sort=PTS&dir=-1&Season=2015-16&SeasonType=Regular%20Season) and [“NBA All Stars 2000-2016” from kaggle.com](https://www.kaggle.com/fmejia21/nba-all-star-game-20002016?select=NBA+All+Stars+2000-2016+-+Sheet1.csv). NBA Player Stats includes all the NBA player statistics for each season from 2010-2016 and the All Star dataset includes the all star statistics from 2000-2016. Using these datasets we aim to make a classification model that will predict whether a player will be an all star for each season based on their annual performances."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preliminary Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Registered S3 method overwritten by 'GGally':\n",
-      "  method from   \n",
-      "  +.gg   ggplot2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "## RUN THIS FIRST TO LOAD LIBRARIES\n",
+    "\n",
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(readxl)\n",
@@ -85,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -217,18 +186,26 @@
     }
    ],
    "source": [
+    "## Data set #1: NBA Player Stats\n",
+    "## Filtered from years 2011-2015\n",
+    "\n",
     "players <- read.csv(\"data/nba_player_stats.csv\")\n",
+    "# TODO: Update the file name to a url.\n",
     "head(players)\n",
+    "\n",
     "players_filtered <- players %>% \n",
     "    filter(Year <= 2015 & Year >= 2011) %>% \n",
-    "    filter(Player != \"0\") %>% \n",
+    "    filter(Player != \"0\") %>%\n",
+    "    # TODO: I'm not exactly sure what we decided on about the variable choice discussion we had earlier, but I think we should only\n",
+    "    #       have one table here, either the full or the cropped one. If we are only using the metrics below, we should probably\n",
+    "    #       use the filtered one, in which case remove head(players).\n",
     "    select(Year, Player, MIN, PTS, FG., REB, AST)\n",
     "head(players_filtered)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -249,21 +226,83 @@
       ")\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Year</th><th scope=col>Player</th><th scope=col>Is_All_Star</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>2015</td><td>LeBron James   </td><td>All Star</td></tr>\n",
+       "\t<tr><td>2015</td><td>Dwyane Wade    </td><td>All Star</td></tr>\n",
+       "\t<tr><td>2015</td><td>Paul George    </td><td>All Star</td></tr>\n",
+       "\t<tr><td>2015</td><td>Carmelo Anthony</td><td>All Star</td></tr>\n",
+       "\t<tr><td>2015</td><td>Kyle Lowry     </td><td>All Star</td></tr>\n",
+       "\t<tr><td>2015</td><td>Jimmy Butler   </td><td>All Star</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " Year & Player & Is\\_All\\_Star\\\\\n",
+       " <dbl> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 2015 & LeBron James    & All Star\\\\\n",
+       "\t 2015 & Dwyane Wade     & All Star\\\\\n",
+       "\t 2015 & Paul George     & All Star\\\\\n",
+       "\t 2015 & Carmelo Anthony & All Star\\\\\n",
+       "\t 2015 & Kyle Lowry      & All Star\\\\\n",
+       "\t 2015 & Jimmy Butler    & All Star\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 3\n",
+       "\n",
+       "| Year &lt;dbl&gt; | Player &lt;chr&gt; | Is_All_Star &lt;chr&gt; |\n",
+       "|---|---|---|\n",
+       "| 2015 | LeBron James    | All Star |\n",
+       "| 2015 | Dwyane Wade     | All Star |\n",
+       "| 2015 | Paul George     | All Star |\n",
+       "| 2015 | Carmelo Anthony | All Star |\n",
+       "| 2015 | Kyle Lowry      | All Star |\n",
+       "| 2015 | Jimmy Butler    | All Star |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Year Player          Is_All_Star\n",
+       "1 2015 LeBron James    All Star   \n",
+       "2 2015 Dwyane Wade     All Star   \n",
+       "3 2015 Paul George     All Star   \n",
+       "4 2015 Carmelo Anthony All Star   \n",
+       "5 2015 Kyle Lowry      All Star   \n",
+       "6 2015 Jimmy Butler    All Star   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Read the all stars dataset that includes the name of all players that won an All Star title.\n",
-    "# Here we also use data from 2011 to 2015 season too\n",
+    "## Data set #1: NBA All Stars 2000-2016\n",
+    "## Filtered from years 2011-2015\n",
+    "\n",
     "all_stars <- read_csv(\"https://raw.githubusercontent.com/RayNguyent/DSCI-100-project/develop/data/all_stars_2000_2016.csv\")\n",
     "all_stars_filtered <- all_stars %>% \n",
     "    filter(Year <= 2015 & Year >= 2011) %>% \n",
     "    select(Year, Player) %>% \n",
-    "    mutate(Is_All_Star = \"All Star\")"
+    "    mutate(Is_All_Star = \"All Star\")\n",
+    "head(all_stars_filtered)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -328,15 +367,17 @@
     }
    ],
    "source": [
-    "# We combine the above datasets into one and replace all players that were not an All Star MVP to \"Regular\".\n",
+    "## Combined data sets\n",
+    "\n",
     "combined_data <- left_join(players_filtered, all_stars_filtered, by = c(\"Year\", \"Player\")) %>% \n",
-    "    replace(is.na(.), \"Regular\") %>% mutate(Is_All_Star = as_factor(Is_All_Star))\n",
+    "    replace(is.na(.), \"Regular\") %>% \n",
+    "    mutate(Is_All_Star = as_factor(Is_All_Star))\n",
     "head(combined_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -356,17 +397,69 @@
     }
    ],
    "source": [
-    "plot<- ggpairs(combined_data, columns = 3:7,\n",
-    "               ggplot2::aes(color = Is_All_Star, alpha = 0.4),upper = list(continuous = \"points\", wrap(\"cor\", size = 2.5)))\n",
+    "## Graphs displaying relationships between each variable.\n",
+    "\n",
+    "plot <- ggpairs(combined_data, columns = 3:7, \n",
+    "                ggplot2::aes(color = Is_All_Star, alpha = 0.4),\n",
+    "                upper = list(continuous = \"points\", wrap(\"cor\", size = 2.5)))\n",
+    "# TODO: Add a legend to the graph, along with x and y labels. Also, standardize the stats if possible.\n",
     "plot"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will find each player’s annual player stats (points, rebounds, assists, minutes per game, and field goal percentage) for each year and use these predictors in our classification model. We chose these variables because they are the most indicative of a player's offensive output, which is the main focus of the all star game.\n",
+    "We will find the annual performance of each player’s points, rebound, assist … \n",
+    "Scatterplot and Density plot\n",
+    "Points, rebound, assist\n",
+    "\n",
+    "TODO: This looks unfinished, so finish this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expected Outcomes and Significance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the annual summary statistics of each player, we expect to see players with top performances (point, assist, rebound …) to have a higher likelihood of being selected into the all star game.\n",
+    "\n",
+    "What impact could such findings have?\n",
+    "\n",
+    "Value of each player, commerical investment of players (or investment in general)\n",
+    "Companies and sponsors are able to sign and invest on certain players early on in the season based on their chance of getting selected into the all star game to maximize investment return. Teams can also focus their resources on certain players in the team based on our prediction. Based on our model, players are able to analyze their weaknesses and improve their overall performance????\n",
+    "What future questions could this lead to?\n",
+    "Based on the specific player being traded, could the value of a player to a specific team be assessed? (This player addresses a deficiency in defensive, offense, rebounding etc that the team may have)\n",
+    "NEW\n",
+    "How can players improve their performance based on our model? How to maximize fan votes, current member votes, and media votes other than improving their performances. Revenue of a team after a player/players on their team is selected to play in the all star game. How much revenue can an all star player bring to the team\n",
+    "\n",
+    "TODO: This also looks unfinished, so finish/clean up too."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: Before submitting... \n",
+    "- Check word count and make sure its under 500.\n",
+    "- Check over rubric and make sure everything is good.\n",
+    "- Read over one last time to make sure everything sounds good.\n",
+    "- Push this into the main branch"
+   ]
   }
  ],
  "metadata": {
