--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -463,12 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will find each player’s annual player stats (points, rebounds, assists, minutes per game, and field goal percentage) for each year and use these predictors in our classification model. We chose these variables because they are the most indicative of a player's offensive output, which is the main focus of the all star game.\n",
-    "We will find the annual performance of each player’s points, rebound, assist … \n",
-    "Scatterplot and Density plot\n",
-    "Points, rebound, assist\n",
-    "\n",
-    "TODO: This looks unfinished, so finish this."
+    "We will find each player’s annual player stats (points, rebounds, assists, minutes per game, and field goal percentage) for each year and use these predictors in our classification model. We chose these variables because they are the most indicative of a player's offensive output, which is the main focus of the all star game."
    ]
   },
   {
@@ -482,29 +477,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the annual summary statistics of each player, we expect to see players with top performances (point, assist, rebound …) to have a higher likelihood of being selected into the all star game.\n",
+    "Since likely cast their votes based on the player's offensive performance, we expect all star players to have higher player stats (points, rebounds, assists, etc) which will make our classification model relatively accurate.\n",
     "\n",
-    "What impact could such findings have?\n",
+    "The impact of this information could improve people's sports betting methods, and help organisations determine player value when negotiating contracts. Many organisations give contracts with bonuses to all star players and this information could help them determine the amount of extra money to offer a player if they make the game. \n",
     "\n",
-    "Value of each player, commerical investment of players (or investment in general)\n",
-    "Companies and sponsors are able to sign and invest on certain players early on in the season based on their chance of getting selected into the all star game to maximize investment return. Teams can also focus their resources on certain players in the team based on our prediction. Based on our model, players are able to analyze their weaknesses and improve their overall performance????\n",
-    "What future questions could this lead to?\n",
-    "Based on the specific player being traded, could the value of a player to a specific team be assessed? (This player addresses a deficiency in defensive, offense, rebounding etc that the team may have)\n",
-    "NEW\n",
-    "How can players improve their performance based on our model? How to maximize fan votes, current member votes, and media votes other than improving their performances. Revenue of a team after a player/players on their team is selected to play in the all star game. How much revenue can an all star player bring to the team\n",
-    "\n",
-    "TODO: This also looks unfinished, so finish/clean up too."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO: Before submitting... \n",
-    "- Check word count and make sure its under 500.\n",
-    "- Check over rubric and make sure everything is good.\n",
-    "- Read over one last time to make sure everything sounds good.\n",
-    "- Push this into the main branch"
+    "Further analysis of these stats could help answer questions like: What makes a good defensive player of the year canidate? What kind of players would be invited to join the Team USA Olympic Basketball team? Can a player's value to an organisation be assessed through their player stats? Can player stat information infer how large their contract should be?\n"
    ]
   }
  ],
