--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -463,7 +463,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will find each player’s annual player stats (points, rebounds, assists, minutes per game, and field goal percentage) for each year and use these predictors in our classification model. We chose these variables because they are the most indicative of a player's offensive output, which is the main focus of the all star game."
+    "We will find each player’s annual player stats (points, rebounds, assists, minutes per game, and field goal percentage) for each year and use these predictors in our classification model. We chose these variables because they are the most indicative of a player's offensive output, which is the main focus of the all star game.\n",
+    "\n",
+    "We have decided to use both scatter plot and density graph as they can best visualize the distributions of various players statistics. The above graph displays the distribution of all star players compared to the regular players for each variable we have chosen. "
    ]
   },
   {
