--- a/report.ipynb
+++ b/report.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -90,87 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.2     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.0.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.2\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.0\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘ggplot2’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘tibble’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tidyr’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dplyr’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Registered S3 method overwritten by 'GGally':\n",
-      "  method from   \n",
-      "  +.gg   ggplot2\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘tidymodels’ was built under R version 4.0.2”\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 0.1.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom    \u001b[39m 0.7.0     \u001b[32m✔\u001b[39m \u001b[34mrecipes  \u001b[39m 0.2.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials    \u001b[39m 0.0.9     \u001b[32m✔\u001b[39m \u001b[34mrsample  \u001b[39m 0.0.7\n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer    \u001b[39m 0.5.4     \u001b[32m✔\u001b[39m \u001b[34mtune     \u001b[39m 0.1.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata\u001b[39m 0.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows\u001b[39m 0.2.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip  \u001b[39m 0.1.3     \u001b[32m✔\u001b[39m \u001b[34myardstick\u001b[39m 0.0.7\n",
-      "\n",
-      "Warning message:\n",
-      "“package ‘broom’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘dials’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘infer’ was built under R version 4.0.3”\n",
-      "Warning message:\n",
-      "“package ‘modeldata’ was built under R version 4.0.1”\n",
-      "Warning message:\n",
-      "“package ‘parsnip’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘tune’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘workflows’ was built under R version 4.0.2”\n",
-      "Warning message:\n",
-      "“package ‘yardstick’ was built under R version 4.0.2”\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘themis’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:tune’:\n",
-      "\n",
-      "    tunable\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:recipes’:\n",
-      "\n",
-      "    step_downsample, step_upsample\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "#library(repr)\n",
@@ -191,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -271,12 +193,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "                                                Table 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We then read another dataset from online using `read_csv()`, which lists every All Star player, and the year that they were an All Star. We then tidied the data. We filtered all the players to keep only the statistics from 2011 to 2015 using `filter()`, then selected only the `Year` and `Player` columns using `select()`, and finally added a new column that all the players had called `Is_All_Star` using `mutate()`. Each player in the dataset had `\"All Star\"` in this column. Finally, we used `head()` to visualize the information."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -372,88 +301,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "            Table 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We then combined the two datasets using `left_join()`, by matching the `Year` and `Player` columns. This left an N/A for all players that were not All Stars in the `Is_All_Star` column. We replaced all of the N/A's with `\"Regular\"`. Then, we changed the `Is_All_Star` column into a factor. Finally, we used `head()` to visualize the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A data.frame: 6 × 22</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>Year</th><th scope=col>Player</th><th scope=col>GP</th><th scope=col>MIN</th><th scope=col>PTS</th><th scope=col>FGM</th><th scope=col>FGA</th><th scope=col>FG.</th><th scope=col>X3PM</th><th scope=col>X3PA</th><th scope=col>⋯</th><th scope=col>FTA</th><th scope=col>FT.</th><th scope=col>OREB</th><th scope=col>DREB</th><th scope=col>REB</th><th scope=col>AST</th><th scope=col>STL</th><th scope=col>BLK</th><th scope=col>TOV</th><th scope=col>Is_All_Star</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>2011</td><td>Kevin Durant     </td><td>78</td><td>38.9</td><td>27.7</td><td>9.1</td><td>19.7</td><td>46.2</td><td>1.9</td><td>5.3</td><td>⋯</td><td>8.7</td><td>88.0</td><td>0.7</td><td>6.1</td><td>6.8</td><td>2.7</td><td>1.1</td><td>1.0</td><td>2.8</td><td>All Star</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>2011</td><td>LeBron James     </td><td>79</td><td>38.8</td><td>26.7</td><td>9.6</td><td>18.8</td><td>51.0</td><td>1.2</td><td>3.5</td><td>⋯</td><td>8.4</td><td>75.9</td><td>1.0</td><td>6.5</td><td>7.5</td><td>7.0</td><td>1.6</td><td>0.6</td><td>3.6</td><td>All Star</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>2011</td><td>Carmelo Anthony  </td><td>77</td><td>35.7</td><td>25.6</td><td>8.9</td><td>19.5</td><td>45.5</td><td>1.2</td><td>3.3</td><td>⋯</td><td>7.9</td><td>83.8</td><td>1.5</td><td>5.8</td><td>7.3</td><td>2.9</td><td>0.9</td><td>0.6</td><td>2.7</td><td>All Star</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>2011</td><td>Dwyane Wade      </td><td>76</td><td>37.1</td><td>25.5</td><td>9.1</td><td>18.2</td><td>50.0</td><td>0.8</td><td>2.7</td><td>⋯</td><td>8.6</td><td>75.8</td><td>1.6</td><td>4.8</td><td>6.4</td><td>4.6</td><td>1.5</td><td>1.1</td><td>3.1</td><td>All Star</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>2011</td><td>Kobe Bryant      </td><td>82</td><td>33.9</td><td>25.3</td><td>9.0</td><td>20.0</td><td>45.1</td><td>1.4</td><td>4.3</td><td>⋯</td><td>7.1</td><td>82.8</td><td>1.0</td><td>4.1</td><td>5.1</td><td>4.7</td><td>1.2</td><td>0.1</td><td>3.0</td><td>All Star</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>2011</td><td>Amar'e Stoudemire</td><td>78</td><td>36.8</td><td>25.3</td><td>9.5</td><td>19.0</td><td>50.2</td><td>0.1</td><td>0.3</td><td>⋯</td><td>7.7</td><td>79.2</td><td>2.5</td><td>5.6</td><td>8.2</td><td>2.6</td><td>0.9</td><td>1.9</td><td>3.2</td><td>Regular </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 × 22\n",
-       "\\begin{tabular}{r|lllllllllllllllllllll}\n",
-       "  & Year & Player & GP & MIN & PTS & FGM & FGA & FG. & X3PM & X3PA & ⋯ & FTA & FT. & OREB & DREB & REB & AST & STL & BLK & TOV & Is\\_All\\_Star\\\\\n",
-       "  & <dbl> & <chr> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <fct>\\\\\n",
-       "\\hline\n",
-       "\t1 & 2011 & Kevin Durant      & 78 & 38.9 & 27.7 & 9.1 & 19.7 & 46.2 & 1.9 & 5.3 & ⋯ & 8.7 & 88.0 & 0.7 & 6.1 & 6.8 & 2.7 & 1.1 & 1.0 & 2.8 & All Star\\\\\n",
-       "\t2 & 2011 & LeBron James      & 79 & 38.8 & 26.7 & 9.6 & 18.8 & 51.0 & 1.2 & 3.5 & ⋯ & 8.4 & 75.9 & 1.0 & 6.5 & 7.5 & 7.0 & 1.6 & 0.6 & 3.6 & All Star\\\\\n",
-       "\t3 & 2011 & Carmelo Anthony   & 77 & 35.7 & 25.6 & 8.9 & 19.5 & 45.5 & 1.2 & 3.3 & ⋯ & 7.9 & 83.8 & 1.5 & 5.8 & 7.3 & 2.9 & 0.9 & 0.6 & 2.7 & All Star\\\\\n",
-       "\t4 & 2011 & Dwyane Wade       & 76 & 37.1 & 25.5 & 9.1 & 18.2 & 50.0 & 0.8 & 2.7 & ⋯ & 8.6 & 75.8 & 1.6 & 4.8 & 6.4 & 4.6 & 1.5 & 1.1 & 3.1 & All Star\\\\\n",
-       "\t5 & 2011 & Kobe Bryant       & 82 & 33.9 & 25.3 & 9.0 & 20.0 & 45.1 & 1.4 & 4.3 & ⋯ & 7.1 & 82.8 & 1.0 & 4.1 & 5.1 & 4.7 & 1.2 & 0.1 & 3.0 & All Star\\\\\n",
-       "\t6 & 2011 & Amar'e Stoudemire & 78 & 36.8 & 25.3 & 9.5 & 19.0 & 50.2 & 0.1 & 0.3 & ⋯ & 7.7 & 79.2 & 2.5 & 5.6 & 8.2 & 2.6 & 0.9 & 1.9 & 3.2 & Regular \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 × 22\n",
-       "\n",
-       "| <!--/--> | Year &lt;dbl&gt; | Player &lt;chr&gt; | GP &lt;int&gt; | MIN &lt;dbl&gt; | PTS &lt;dbl&gt; | FGM &lt;dbl&gt; | FGA &lt;dbl&gt; | FG. &lt;dbl&gt; | X3PM &lt;dbl&gt; | X3PA &lt;dbl&gt; | ⋯ ⋯ | FTA &lt;dbl&gt; | FT. &lt;dbl&gt; | OREB &lt;dbl&gt; | DREB &lt;dbl&gt; | REB &lt;dbl&gt; | AST &lt;dbl&gt; | STL &lt;dbl&gt; | BLK &lt;dbl&gt; | TOV &lt;dbl&gt; | Is_All_Star &lt;fct&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | 2011 | Kevin Durant      | 78 | 38.9 | 27.7 | 9.1 | 19.7 | 46.2 | 1.9 | 5.3 | ⋯ | 8.7 | 88.0 | 0.7 | 6.1 | 6.8 | 2.7 | 1.1 | 1.0 | 2.8 | All Star |\n",
-       "| 2 | 2011 | LeBron James      | 79 | 38.8 | 26.7 | 9.6 | 18.8 | 51.0 | 1.2 | 3.5 | ⋯ | 8.4 | 75.9 | 1.0 | 6.5 | 7.5 | 7.0 | 1.6 | 0.6 | 3.6 | All Star |\n",
-       "| 3 | 2011 | Carmelo Anthony   | 77 | 35.7 | 25.6 | 8.9 | 19.5 | 45.5 | 1.2 | 3.3 | ⋯ | 7.9 | 83.8 | 1.5 | 5.8 | 7.3 | 2.9 | 0.9 | 0.6 | 2.7 | All Star |\n",
-       "| 4 | 2011 | Dwyane Wade       | 76 | 37.1 | 25.5 | 9.1 | 18.2 | 50.0 | 0.8 | 2.7 | ⋯ | 8.6 | 75.8 | 1.6 | 4.8 | 6.4 | 4.6 | 1.5 | 1.1 | 3.1 | All Star |\n",
-       "| 5 | 2011 | Kobe Bryant       | 82 | 33.9 | 25.3 | 9.0 | 20.0 | 45.1 | 1.4 | 4.3 | ⋯ | 7.1 | 82.8 | 1.0 | 4.1 | 5.1 | 4.7 | 1.2 | 0.1 | 3.0 | All Star |\n",
-       "| 6 | 2011 | Amar'e Stoudemire | 78 | 36.8 | 25.3 | 9.5 | 19.0 | 50.2 | 0.1 | 0.3 | ⋯ | 7.7 | 79.2 | 2.5 | 5.6 | 8.2 | 2.6 | 0.9 | 1.9 | 3.2 | Regular  |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  Year Player            GP MIN  PTS  FGM FGA  FG.  X3PM X3PA ⋯ FTA FT.  OREB\n",
-       "1 2011 Kevin Durant      78 38.9 27.7 9.1 19.7 46.2 1.9  5.3  ⋯ 8.7 88.0 0.7 \n",
-       "2 2011 LeBron James      79 38.8 26.7 9.6 18.8 51.0 1.2  3.5  ⋯ 8.4 75.9 1.0 \n",
-       "3 2011 Carmelo Anthony   77 35.7 25.6 8.9 19.5 45.5 1.2  3.3  ⋯ 7.9 83.8 1.5 \n",
-       "4 2011 Dwyane Wade       76 37.1 25.5 9.1 18.2 50.0 0.8  2.7  ⋯ 8.6 75.8 1.6 \n",
-       "5 2011 Kobe Bryant       82 33.9 25.3 9.0 20.0 45.1 1.4  4.3  ⋯ 7.1 82.8 1.0 \n",
-       "6 2011 Amar'e Stoudemire 78 36.8 25.3 9.5 19.0 50.2 0.1  0.3  ⋯ 7.7 79.2 2.5 \n",
-       "  DREB REB AST STL BLK TOV Is_All_Star\n",
-       "1 6.1  6.8 2.7 1.1 1.0 2.8 All Star   \n",
-       "2 6.5  7.5 7.0 1.6 0.6 3.6 All Star   \n",
-       "3 5.8  7.3 2.9 0.9 0.6 2.7 All Star   \n",
-       "4 4.8  6.4 4.6 1.5 1.1 3.1 All Star   \n",
-       "5 4.1  5.1 4.7 1.2 0.1 3.0 All Star   \n",
-       "6 5.6  8.2 2.6 0.9 1.9 3.2 Regular    "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "combined_data <- left_join(players, all_stars_filtered, by = c(\"Year\", \"Player\")) %>% \n",
     "    replace(is.na(.), \"Regular\") %>% \n",
     "    mutate(Is_All_Star = as_factor(Is_All_Star))\n",
     "\n",
-    "head(combined_data)"
+    "# head(combined_data)"
    ]
   },
   {
@@ -465,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -548,12 +416,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "                        Table 4: Final dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We want to calculate the average for each variable by first group the observations by `Is_All_Star` and then use `summarize()` to compute the means. Likewise, we still group by `Is_All_Star` and use summarize to calculate the number of observations for each group then divide by the total number of observations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figure 2: "
+    "                                   Figure 2"
    ]
   },
   {
@@ -819,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +742,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "data_metrics <- metrics(data_prediction, truth = Is_All_Star, estimate = .pred_class) %>%\n",
+    "    filter(.metric == \"accuracy\") %>%\n",
+    "    select(.estimate) %>%\n",
+    "    pull()\n",
+    "\n",
+    "data_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we used conf_mat() on the data_prediction data frame to create a confusion matrix of our classifier’s results. Which shows that our All Star prediction accuracy is 23/26, and regular prediction accuracy is ...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -882,21 +779,14 @@
     }
    ],
    "source": [
-    "data_metrics <- metrics(data_prediction, truth = Is_All_Star, estimate = .pred_class) %>%\n",
-    "    filter(.metric == \"accuracy\") %>%\n",
-    "    select(.estimate) %>%\n",
-    "    pull()\n",
-    "\n",
-    "data_metrics\n",
-    "\n",
     "confusion <- conf_mat(data_prediction, truth = Is_All_Star, estimate = .pred_class)\n",
     "\n",
-    "confusion\n"
+    "confusion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
